# Differential-Equation-Solver

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: bindings.cpp.480EA87FE7005106.idx  euler_stepper.cpp.46399076F32CF23C.idx  euler_stepper.hpp.CC296836BEF0FBB8.idx  funcs.hpp.DB4F2452F8A6A38F.idx  main.cpp.7B312C9B49112AD7.idx  metric.hpp.778859F9F7854705.idx  midpoint_stepper.cpp.819C549D26F0FED5.idx  midpoint_stepper.hpp.35AFA12532255839.idx  problem.hpp.6B0B77E3E954E5DF.idx  rk3_stepper.cpp.47D925158B0C5004.idx  rk3_stepper.hpp.4F95E68CCDA9AABB.idx  rk4_stepper.cpp.C893E0FA180A3235.idx  rk4_stepper.hpp.266A4B16F55A0CB2.idx  rk5_stepper.cpp.E7B37BBC68588AE6.idx  rk5_stepper.hpp.9C7D9D8FB20247F9.idx  solver.cpp.2884BFC8E09ACC5D.idx  solver.hpp.99714140270684F1.idx  stepper.hpp.06ECDF2D2F3D8615.idx  types.hpp.6A934B86973F25F8.idx
examples/: 2nd_order.cpp  heat_1d.cpp
include/: pde.hpp  problem.hpp  solver.hpp  types.hpp
include/Steppers/: euler_stepper.hpp  midpoint_stepper.hpp  rk3_stepper.hpp  rk4_stepper.hpp  rk5_stepper.hpp  stepper.hpp
include/errorfunc/: funcs.hpp  metric.hpp
include/pde/: heat_equation.hpp
python/: 2d_heat_equation.py  2nd_order.py  compare_steppers.py  plot_animate.py  plotter.py  predator_prey.py  tempCodeRunnerFile.py
src/: bindings.cpp  main.cpp  pde.cpp  solver.cpp
src/Steppers/: euler_stepper.cpp  midpoint_stepper.cpp  rk3_stepper.cpp  rk4_stepper.cpp  rk5_stepper.cpp
src/pde/: heat_equation.cpp
